# jarvis

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  app.py  cloud.md  config.py  install.py  jarvis_log.py  main.py  media_engine.py  push.py  pyproject.toml  requirements.txt  start.py  startup_check.py  system_profile.py  tts.py  update.py  voice_agent.py
agents/: __init__.py  base_agent.py  ceo.py  orchestrator.py  team.py  tools.py
obsidian_brain/: Guten_Morgen.md  Gutssonisch_Guten_Morgen_Hallo_JARVIS.md  ⚙️ Technische Architektur.md  🌐 KI-Modelle & APIs.md  🎯 Ziele & Mission.md  👤 Wer ist JARVIS.md  💡 Ideen & Features.md  📚 Python Bibliotheken.md  🔐 Security & Datenschutz.md  🚀 Erweiterungsmöglichkeiten.md  🛠️ Tools & Werkzeuge.md  🤖 Agenten-Team.md  🧠 JARVIS BRAIN.md  🧬 Künstliche Intelligenz.md
static/css/: style.css
static/js/: app.js  brain.js  pcm-processor.js  vault.js
templates/: index.html
